--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+app/node_modules
+api/node_modules
 /.pnp
 .pnp.js
 
@@ -12,7 +13,7 @@
 /build
 
 # misc
-/public/sound-files*
+app/public/sound-files*
 .DS_Store
 .env.local
 .env.development.local
