--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
