--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "install": "^0.13.0",
-    "npm": "^6.14.3",
+    "npm": "^6.14.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.3.1",
+    "react-scripts": "^3.4.3",
     "uifx": "^2.0.7"
   },
   "scripts": {
