--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "tuning-game",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "version": "0.0.1",
   "scripts": {
     "start": "webpack server --open --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,20 +20,27 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@babel/runtime": "^7.18.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^28.1.1",
     "babel-loader": "^8.2.5",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4",
