--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "tuning-game",
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
   "version": "0.0.1",
   "scripts": {
     "start": "webpack server --open --mode development",
@@ -11,10 +8,12 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
@@ -26,6 +25,7 @@
     "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
