--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@babel/runtime": "^7.18.3",
+    "@testing-library/dom": "^8.16.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.5",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
